--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<meta charset="utf-8">
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>atelye</title>
@@ -10,8 +10,12 @@
 			text-align: center;
 			color: #333;
 		}
+		a{
+			color: #333;
+			text-decoration: none;
+		}
 		h1 {
-			font-size: 96px;
+			font-size: 88px;
 			line-height: 0px;
 		}
 		h2 {
@@ -22,7 +26,7 @@
 <body>
 	<div id="message">
 		<h2>Bientôt!</h2>
-		<h1>atelye</h1>
+		<h1><a href="https://www.facebook.com/pages/Lately%C3%A9/1388701978057704">atelyé</a></h1>
 	</div>
 </body>
 </html>
