--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 			text-align: center;
 			color: #333;
 		}
+		a{
+			color: #333;
+			text-decoration: none;
+		}
 		h1 {
-			font-size: 96px;
+			font-size: 88px;
 			line-height: 0px;
 		}
 		h2 {
@@ -22,7 +26,7 @@
 <body>
 	<div id="message">
 		<h2>Bientôt!</h2>
-		<h1>atelye</h1>
+		<h1><a href="https://www.facebook.com/pages/Lately%C3%A9/1388701978057704">atelyé</a></h1>
 	</div>
 </body>
 </html>
