--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>atelye</title>
 	<style type="text/css">
+	@font-face {
+      font-family: "Burea Gro One Thr";
+      src: url("fonts/BureaGroOneThr.ttf");
+    }
 		body {
+			font-family: "Burea Gro One Thr", serif;
 			padding-top: 15%;
 			text-align: center;
 			color: #333;
