change main message

--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>atelye</title>
+		<link href="css/main.css" rel="stylesheet">
 	<style type="text/css">
-	@font-face {
-      font-family: "Burea Gro One Thr";
-      src: url("fonts/BureaGroOneThr.ttf");
-    }
-		body {
-			font-family: "Burea Gro One Thr", serif;
+		@font-face {
+	      font-family: "Burea Gro One Thr";
+	      src: url("fonts/BureaGroOneThr.ttf");
+	    }
+		body {			
 			padding-top: 15%;
 			text-align: center;
 			color: #333;
+			background: url('images/logo.png') 0 100% no-repeat rgb(232, 233, 235);
 		}
 		a{
 			color: #333;
 			text-decoration: none;
 		}
+		p{
+			font-size: 24px;
+		}
 		h1 {
+			font-family: "Burea Gro One Thr", serif;
 			font-size: 88px;
 			line-height: 0px;
 		}
@@ -27,11 +32,23 @@
 			font-size: 41px;
 		}
 	</style>
+
 </head>
 <body>
 	<div id="message">
-		<h2>Bientôt!</h2>
-		<h1><a href="https://www.facebook.com/pages/Lately%C3%A9/1388701978057704">atelyé</a></h1>
+		<h1>l’atelyé</h1>
+		<p>Projet d’ouverture d’un atelier d’imprimerie participative<br>
+		où tous les créatifs pourront utiliser librement des machines <br> 
+		d’imprimerie traditionnelle et numérique <br>
+		 à des fins expérimentales comme professionnelles <br>
+		 pour la réalisation d’objets graphiques <br>
+		 hors du commun.</p>
+		 <a href="https://www.facebook.com/pages/Lately%C3%A9/1388701978057704" class="btn btn-social-icon btn-facebook">
+		    <i class="fa fa-facebook"></i>
+		  </a>
+		 <a href="https://twitter.com/atelye_" class="btn btn-social-icon btn-twitter">
+		    <i class="fa fa-twitter"></i>
+		  </a>
 	</div>
 </body>
 </html>
