--- a/index.html
+++ b/index.html
@@ -10,10 +10,15 @@
 	      font-family: "Burea Gro One Thr";
 	      src: url("fonts/BureaGroOneThr.ttf");
 	    }
+	    @font-face {
+	      font-family: "SyntaxLTStd Roman";
+	      src: url("fonts/SyntaxLTStd-Roman.otf");
+	      }	    
+
 		body {			
 			padding-top: 15%;
 			text-align: center;
-			color: #333;
+			color: rgb(224, 102, 105);
 			background: url('images/logo.png') 0 100% no-repeat rgb(232, 233, 235);
 		}
 		a{
@@ -21,11 +26,12 @@
 			text-decoration: none;
 		}
 		p{
+			font-family: "SyntaxLTStd Roman", serif;
 			font-size: 24px;
 		}
 		h1 {
 			font-family: "Burea Gro One Thr", serif;
-			font-size: 88px;
+			font-size: 80px;
 			line-height: 0px;
 		}
 		h2 {
