change font weight

--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
 			font-family: "Burea Gro One Thr", serif;
 			font-size: 80px;
 			line-height: 0px;
+			font-weight: 300;
 		}
 		h2 {
 			font-size: 41px;
