change font weight

--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 		}
 		p{
 			font-family: "SyntaxLTStd Roman", serif;
-			font-size: 24px;
+			font-size: 22px;
+			font-weight: 200;
 		}
 		h1 {
 			font-family: "Burea Gro One Thr", serif;
